# Copet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  hud.html  index.html  package.json  pnpm-lock.yaml  sessions.html  settings.html  shop.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-release.yml
crates/copet-hook/: Cargo.toml
crates/copet-protocol/: Cargo.toml
crates/copet-run/: Cargo.toml
docs/: agent-hook-setup.md  codebase-summary.md  design-guidelines.md  distribution-and-signing.md  installation-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md  tech-stack.md
docs/journals/: 2026-06-23-running-sessions-multi-surface.md  2026-06-23-session-info-enrichment-phase1.md  2026-06-23-session-info-enrichment-phase2.md  2026-06-24-agent-narration-display.md  2026-06-24-pet-fixed-session-panel.md  2026-06-24-session-panel-white-redesign.md  2026-06-25-macos-popover-focus-stability.md
plans/260622-1501-copet-desktop-agent-pet/: phase-01-scaffold-and-transparent-overlay-poc.md  phase-02-pet-rendering-engine.md  phase-03-agent-integration-backend.md  phase-04-tamagotchi-core.md  phase-05-token-economy-and-shop.md  phase-06-ui-shell-and-system-integration.md  phase-07-wire-agent-state-to-pet-reaction.md  phase-08-packaging-and-distribution.md  plan.md
plans/260623-0913-running-sessions-multi-surface/: phase-01-session-data-core.md  phase-02-sessionlist-and-hud.md  phase-03-tray-popover.md  phase-04-tooltip-expansion.md  phase-05-settings-theme-picker.md  plan.md
plans/260623-1033-session-info-enrichment/: phase-01-hook-payload-enrichment.md  phase-02-transcript-enrichment-for-claude.md  plan.md
plans/260623-1454-tray-popover-control-panel/: phase-01-popover-layout-existing-data.md  phase-02-daily-token-and-feed-tracking.md  phase-03-pet-name-and-size.md  phase-04-menu-bar-and-updates.md  plan.md
plans/260624-0755-pet-fixed-session-panel/: phase-01-pin-pet-bottom-center.md  phase-02-fixed-panel-and-visibility.md  phase-03-verify-and-regression.md  plan.md
plans/260624-1112-pet-session-panel-white-redesign/: phase-01-row-content-redesign.md  phase-02-panel-shell-and-scoped-styles.md  phase-03-integration-and-visual-qa.md  plan.md
plans/260624-1518-agent-narration-display/: phase-01-codex-narration-via-stop-hook.md  phase-02-question-detection-waiting-state.md  phase-03-claude-tool-description-enrichment.md  phase-04-gemini-narration-via-wrapper.md  phase-05-themed-activity-phrases.md  plan.md
plans/260625-1421-nonactivating-nspanel-popover-focus/: phase-01-pet-non-activating-panel.md  phase-02-popover-panel-and-native-dismissal.md  phase-03-cleanup-regression-docs.md  plan.md
plans/reports/: brainstorm-260623-0913-running-sessions-multi-surface-report.md  brainstorm-260624-1049-pet-session-panel-white-redesign-mockup.html  brainstorm-260624-1049-pet-session-panel-white-redesign-report.md  brainstorm-design-260624-0755-pet-fixed-session-panel-report.md  deep-research-260624-1518-agent-narration-extraction-claude-codex-gemini-report.md  research-260622-1501-tauri-desktop-pet-overlay-report.md  (+9 more)
scripts/: build-sidecars.sh  gen-pet-spritesheet.mjs  install-hooks.ps1  install-hooks.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  hud.json  sessions.json  settings.json  shop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: install_commands.rs  mod.rs  system_commands.rs  window_commands.rs
src-tauri/src/ipc/: mod.rs  socket_daemon.rs
src-tauri/src/tray/: mod.rs  tray.rs
(+96 files in other folders)
