[package]
name = "copet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "copet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }
interprocess = { version = "2", features = ["tokio"] }
copet-protocol = { path = "../crates/copet-protocol" }

[target.'cfg(target_os = "macos")'.dependencies]
# Pet overlay must also float over *other apps'* native-fullscreen Spaces.
# tao's `visibleOnAllWorkspaces` only sets CanJoinAllSpaces (ordinary desktops);
# FullScreenAuxiliary is required for a non-fullscreen window to draw over a
# fullscreen app's Space. Applied in init_windows (lib.rs).
#
# NSScreen/NSEvent: position the tray popover natively in Cocoa points — the only
# coordinate space macOS keeps consistent across mixed-DPI displays (Tauri's
# cursor_position()/monitor coords are not; see tray.rs + tauri#7890).
objc2 = "0.6"
# block2: the sessions-popover dismiss monitor (tray.rs) passes a Rust closure to
# NSEvent::addGlobalMonitorForEventsMatchingMask_handler, which takes an Objective-C
# block — the "block2" feature on objc2-app-kit enables those block-taking methods.
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWindow", "NSResponder", "NSScreen", "NSEvent", "block2"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSArray", "NSGeometry"] }
block2 = "0.6"

